# Projet-LegiForces

./: CMakeLists.txt  Main.qml  README.md  main.cpp
HTML/: carte-france-metropolitaine-svg.html
components/: LegiFooter.qml  LegiHeader.qml  LegiMainContent.qml  LegiRightSidebar.qml  LegiSidebar.qml
js/: DepartmentData.js  DepartmentDetector.js
pages/: Map.qml
